first prompt/alert

--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Lab 1b</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style type = "text/css">
+    h1 {background-color: bisque;
+    color: coral}
+    </style>
+  </head>
+  <nav></nav>
+  <body>
+    <script>
+      var name = prompt("What is your name?");
+      alert("Hello " + name + "!");
+      
 
+    </script>
+  </body>
+</html>
