--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <script>
       var name = prompt("What is your name?");
       alert("Hello " + name + "!");
-      
+      var age = prompt("How old are you in years according to the Gregorian calender?");
+      alert(age + "is a good age, " + name + "!");
+      var where = prompt("Where would you like to go?");
+      alert(age + " is a good age to go to " + where + ", " + name + "!");
 
     </script>
   </body>
